--- a/Scribble.html
+++ b/Scribble.html
@@ -6,8 +6,10 @@
     <body>
         
         <div id="body">
+            <canvas id="canvas-wrapper-div" width="600" height="600"></canvas>
         </div>
-        <script src="./JavaScript/main.js"></script>
+        <script src="./js/canvas.js"></script>
+        <script src="./js/main.js"></script>
 
     </body>
 </html>
