--- a/client/Scribble.html
+++ b/client/Scribble.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -7,7 +7,7 @@
         
         <div id="body">
         </div>
-        <script src="./js/canvas.js"></script>
+<!--        <script src="./js/canvas.js"></script>-->
         <script src="./js/main.js"></script>
 
     </body>
