Sending messages between server and client

--- a/client/Scribble.html
+++ b/client/Scribble.html
@@ -8,6 +8,7 @@
         <div id="body">
         </div>
 <!--        <script src="./js/canvas.js"></script>-->
+        <script src="./js/opcodes.js"></script>
         <script src="./js/connection.js"></script>
         <script src="./js/main.js"></script>
 
