--- a/client/Scribble.html
+++ b/client/Scribble.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="css/styles.css">
+        <title>Ido's Scribble</title>
     </head>
     <body>
-        
+        <h1>Ido's Scribble</h1>
         <div id="body">
         </div>
 <!--        <script src="./js/canvas.js"></script>-->
