--- a/client/Scribble.html
+++ b/client/Scribble.html
@@ -14,6 +14,6 @@
         <script src="./js/connection.js"></script>
         <script src="./js/chat.js"></script>
         <script src="./js/main.js"></script>
-
+        <script>create_ui();</script>
     </body>
 </html>
